name:                mbgl-style-validator
version:             0.1.0.0
synopsis:            Validates MapBox GL Style JSON.
description:         Validates MapBox GL Style JSON according to the GL Style spec.
homepage:            https://github.com/caneroj1/mbgl-style-validator#readme
license:             BSD3
license-file:        LICENSE
author:              Joe Canero
maintainer:          jmc41493@gmail.com
copyright:           Copyright: (c) 2017 Joe Canero
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  other-modules:       Validator.Internal
                     , Validator.Prism
                     , Validator.Types
                     , Validator.Utility
                     , Validator.Values
  exposed-modules:     Validator
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , lens
                     , lens-aeson
                     , mtl
                     , scientific
                     , text
                     , transformers
                     , unordered-containers
                     , vector
  default-language:    Haskell2010

executable mbgl-style-validator-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mbgl-style-validator
  default-language:    Haskell2010

test-suite mbgl-style-validator-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mbgl-style-validator
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/caneroj1/mbgl-style-validator
